--- a/package.json
+++ b/package.json
@@ -22,23 +22,23 @@
   "license": "MIT",
   "description": "",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^28.0.3",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^12.1.2",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.17",
     "@types/socket.io": "^3.0.1",
     "@types/socket.io-client": "^1.4.36",
-    "nodemon": "^3.1.10",
-    "rollup": "^4.41.1",
-    "sass": "^1.89.1",
-    "tslib": "^2.8.1",
-    "tsx": "^4.19.4"
+    "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "sass": "^1.89.1",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "tsx": "^4.19.4",
+    "rollup": "^4.41.1",
     "dotenv": "^16.5.0",
+    "tslib": "^2.8.1",
     "express": "^5.1.0",
     "pug": "^3.0.3",
     "socket.io": "^4.8.1",
